Adjusted parameter set up Deleted old folders

--- a/latex/article/tesina.tex
+++ b/latex/article/tesina.tex
@@ -29,7 +29,7 @@
 % \doi{\url{http://dx.doi.org/10.1364/XX.XX.XXXXXX}}
 
 \begin{abstract}
-Le proprietà spettrali di segnali rumorosi di impulsi in tensione caratterizzati da spaziatura e fase di campionamento irregolari, sono utilizzate in questo lavoro con l'intento di simulare un segnale di natura biologica e verificare le capacità predittive di alcuni test di soglia ampiamente utilizzati per la rilevazione di segnali provenienti da popolazioni di neuroni con tecnologia $MEA$, \cite{Lambacher2011}, \cite{Vallicelli2017}. 
+Le proprietà spettrali di segnali rumorosi di impulsi in tensione caratterizzati da spaziatura e ritardo temporale irregolari, sono utilizzate in questo lavoro con l'intento di simulare un segnale di natura biologica e verificare le capacità predittive di alcuni test di soglia ampiamente utilizzati per la rilevazione di segnali provenienti da popolazioni di neuroni con tecnologia $MEA$, \cite{Lambacher2011}, \cite{Vallicelli2017}. 
 
 L'analisi è condotta parallelamente sotto il profilo spaziale e temporale analizzando la distribuzione congiunta di, (1) una metrica spettrale per la distanza del segnale filtrato da quello originale e (2) un indice di precisione della rilevazione nel tempo degli impulsi.
 
@@ -69,11 +69,11 @@ La seguente tabella \ref{tab:param} mostra i principali parametri di simulazione
 \begin{tabular}{ccc}
 \hline
 Durata segnale       & 1s        \\
-Spike rate           & 10Hz      \\
+Spike rate           & 50-250Hz      \\
 Durata spike         & 1ms       \\
 Ampiezza Max 0p      & 60mV      \\
 Campionamento        & 9kSamples \\
-Filtro. $\nu_{low}$  & 0.1 kHz   \\
+Filtro. $\nu_{low}$  & 0.02 kHz   \\
 Filtro. $\nu_{high}$ & 2.5 kHz   \\
 Pixels               & 7         \\
 \hline
